<resources>
    <string name="app_name">Tolib Karimi Ozarakhsh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ashor_text">Ашъор</string>
    <string name="favorite_text">Писандида</string>
    <string name="search_text">Ҷӯстуҷу</string>
    <string name="banner_ad_unit_id">ca-app-pub-7394283010044563/9150182777</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_size">Размер шрифта</string>
    <string name="change_font_size">Change font size</string>
    <string name="notification">Уведомление</string>
    <string name="night_mode">Ночьная тема</string>
    <string name="help">Помощь</string>
</resources>


    <!--     testing banner id-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->